--- a/CSS/main.css
+++ b/CSS/main.css
@@ -129,17 +129,33 @@ body {
 
 .title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  margin: 0 auto 50px;
+  margin: 0 auto 30px;
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .title {
+    margin: 0 auto 50px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .title {
+    font-size: 36px;
+  }
 }
 
 .social-links-list {
   display: flex;
   margin-top: 16px;
-  justify-content: space-between;
+  justify-content: center;
+}
+
+.social-link-item:not(:last-child) {
+  margin-right: 10px;
 }
 
 .social-link {
@@ -658,6 +674,7 @@ form .modal-btn {
   max-width: 1600px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   margin: 0 auto;
 }
 
@@ -765,6 +782,12 @@ form .modal-btn {
   padding-top: 0;
 }
 
+@media screen and (max-width: 1199px) {
+  .section + .what-we-do {
+    display: none;
+  }
+}
+
 .we-do-list {
   display: flex;
   justify-content: space-between;
@@ -793,25 +816,46 @@ form .modal-btn {
   background: rgba(47, 48, 58, 0.8);
 }
 
-.team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+    justify-content: center;
+  }
 }
 
 .team-member-card {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-left: 30px;
   margin-top: 30px;
   background-color: var(--main-lite-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  width: 270px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-member-card {
+    width: 354px;
+    margin-left: 30px;
+    flex-basis: calc(100% / 2 - 30px);
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member-card {
+    flex-basis: calc(100% / 4 - 30px);
+    width: 270px;
+  }
 }
 
 .team-member-wrapper {
-  padding: 30px 32px;
+  padding: 30px 0 24px;
+}
+
+@media screen and (min-width: 1200px) {
+  .team-member-wrapper {
+    padding: 30px 0;
+  }
 }
 
 .team-members {
