--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -1,8 +1,15 @@
 .title {
   font-weight: 700;
-  font-size: 36px;
+  font-size: 28px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-  margin: 0 auto 50px;
+  margin: 0 auto 30px;
   text-align: center;
+
+  @media screen and(min-width: 768px) {
+    margin: 0 auto 50px;
+  }
+  @media screen and(min-width: 1200px) {
+    font-size: 36px;
+  }
 }
