--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -9,6 +9,7 @@
   max-width: 1600px;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center;
   margin: 0 auto;
 
   @media screen and (min-width: 768px) {
