--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -1,23 +1,37 @@
 .team-list {
-  display: flex;
-  flex-wrap: wrap;
-  margin-left: -30px;
-  margin-top: -30px;
+  @media screen and(min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+    justify-content: center;
+  }
 }
 
 .team-member-card {
-  flex-basis: calc(100% / 4 - 30px);
-  margin-left: 30px;
   margin-top: 30px;
   background-color: var(--main-lite-color);
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
-  width: 270px;
+
+  @media screen and(min-width: 768px) {
+    width: 354px;
+    margin-left: 30px;
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
+  @media screen and(min-width: 1200px) {
+    flex-basis: calc(100% / 4 - 30px);
+    width: 270px;
+  }
 }
 
 .team-member-wrapper {
-  padding: 30px 32px;
+  padding: 30px 0 24px;
+  @media screen and(min-width: 1200px) {
+    padding: 30px 0;
+  }
 }
 
 .team-members {
