--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,14 +1,39 @@
 .clients-list {
-  display: flex;
-  justify-content: space-between;
+  @media screen and(min-width: 480px) {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -30px;
+    margin-top: -30px;
+    justify-content: center;
+  }
+  // justify-content: space-between;
+}
+
+.client-item {
+  margin-top: 30px;
+  height: 90px;
+  @media screen and(min-width: 480px) {
+    margin-left: 30px;
+    width: 210px;
+    // flex-basis: calc(100% / 2 - 30px);
+  }
+  @media screen and(min-width: 768px) {
+    width: 226px;
+    // flex-basis: calc(100% / 3 - 30px);
+  }
+  @media screen and(min-width: 1200px) {
+    width: 170px;
+    // flex-basis: calc(100% / 6 - 30px);
+  }
 }
 
 .client-link {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 170px;
-  height: 90px;
+
+  height: 100%;
+  width: 100%;
   border: 1px solid var(--icon-color);
   border-radius: 4px;
   color: var(--icon-color);
