--- a/CSS/main.css
+++ b/CSS/main.css
@@ -100,16 +100,37 @@ body {
 
 .footer .container {
   display: flex;
-  align-items: baseline;
+  align-items: center;
+  text-align: center;
+}
+
+@media screen and (max-width: 1199px) {
+  .footer .container {
+    flex-direction: column;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .footer .container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   color: var(--main-dark-color);
   letter-spacing: 0.03em;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
 }
 
 .header .logo {
@@ -195,7 +216,19 @@ body {
 }
 
 .subscribe-container {
-  margin-left: auto;
+  margin-top: 60px;
+}
+
+@media screen and (max-width: 767px) {
+  .subscribe-container {
+    width: 100%;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-container {
+    margin-left: auto;
+  }
 }
 
 .subscribe-caption {
@@ -212,15 +245,20 @@ body {
   align-items: center;
 }
 
+@media screen and (max-width: 767px) {
+  label {
+    width: 100%;
+  }
+}
+
 .subscribe-input {
   display: block;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
   padding: 15px 16px;
-  margin-right: 12px;
   color: var(--main-lite-color);
   font-family: inherit;
   font-weight: 400;
@@ -237,6 +275,19 @@ body {
 .subscribe-input:focus {
   border-color: var(--accent-color);
   outline: none;
+}
+
+@media screen and (min-width: 480px) {
+  .subscribe-input {
+    width: 450px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe-input {
+    width: 358px;
+    margin-right: 12px;
+  }
 }
 
 .modal-btn {
@@ -267,7 +318,24 @@ body {
 .subscribe .modal-btn {
   display: flex;
   align-items: center;
-  margin-top: 0;
+  margin-top: 20px;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe .modal-btn {
+    margin-top: 0;
+  }
+}
+
+.subscribe {
+  flex-direction: column;
+}
+
+@media screen and (min-width: 1200px) {
+  .subscribe {
+    flex-direction: row;
+    align-items: center;
+  }
 }
 
 .telegram-img {
@@ -933,8 +1001,16 @@ form .modal-btn {
   background-color: var(--background-dark-color);
 }
 
-.internal-links {
-  margin-right: 70px;
+@media screen and (min-width: 767px) {
+  .internal-links {
+    margin-right: 165px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .internal-links {
+    margin-right: 70px;
+  }
 }
 
 .footer-contacts-list {
@@ -969,7 +1045,13 @@ form .modal-btn {
 }
 
 .footer-contacts-list-item:not(:last-child) {
-  margin-bottom: 9px;
+  margin-bottom: 8px;
+}
+
+@media screen and (min-width: 1200px) {
+  .footer-contacts-list-item:not(:last-child) {
+    margin-bottom: 9px;
+  }
 }
 
 .join-us-links-list {
@@ -977,12 +1059,26 @@ form .modal-btn {
   height: 80px;
 }
 
+@media screen and (max-width: 767px) {
+  .join-us-links-list {
+    margin-top: 60px;
+  }
+}
+
 .join-us-caption {
   font-weight: 700;
+  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   margin-bottom: 20px;
   color: var(--main-lite-color);
+}
+
+@media screen and (min-width: 768px) {
+  .footer__links-container {
+    display: flex;
+    align-items: baseline;
+  }
 }
 /*# sourceMappingURL=main.css.map */
