--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -16,6 +16,17 @@
 
   .footer & {
     display: flex;
-    align-items: baseline;
+
+    align-items: center;
+    text-align: center;
+
+    @media screen and(max-width: 1199px) {
+      flex-direction: column;
+    }
+
+    @media screen and (min-width: 1200px) {
+      display: flex;
+      align-items: baseline;
+    }
   }
 }
