--- a/sass/components/_modal-btn.scss
+++ b/sass/components/_modal-btn.scss
@@ -26,7 +26,19 @@
   .subscribe & {
     display: flex;
     align-items: center;
-    margin-top: 0;
+    margin-top: 20px;
+
+    @media screen and(min-width: 1200px) {
+      margin-top: 0;
+    }
+  }
+}
+
+.subscribe {
+  flex-direction: column;
+  @media screen and(min-width: 1200px) {
+    flex-direction: row;
+    align-items: center;
   }
 }
 
