--- a/sass/components/_subscribe-input.scss
+++ b/sass/components/_subscribe-input.scss
@@ -1,5 +1,13 @@
 .subscribe-container {
-  margin-left: auto;
+  margin-top: 60px;
+
+  @media screen and(max-width: 767px) {
+    width: 100%;
+  }
+
+  @media screen and(min-width: 1200px) {
+    margin-left: auto;
+  }
 }
 
 .subscribe-caption {
@@ -16,15 +24,20 @@
   align-items: center;
 }
 
+label {
+  @media screen and(max-width: 767px) {
+    width: 100%;
+  }
+}
 .subscribe-input {
   display: block;
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   background-color: transparent;
   padding: 15px 16px;
-  margin-right: 12px;
+
   color: var(--main-lite-color);
   font-family: inherit;
   font-weight: 400;
@@ -40,5 +53,13 @@
   &:focus {
     border-color: var(--accent-color);
     outline: none;
+  }
+
+  @media screen and(min-width: 480px) {
+    width: 450px;
+  }
+  @media screen and(min-width: 1200px) {
+    width: 358px;
+    margin-right: 12px;
   }
 }
