--- a/CSS/main.css
+++ b/CSS/main.css
@@ -705,6 +705,28 @@ form .modal-btn {
   align-items: center;
 }
 
+.burger-btn {
+  margin-left: auto;
+}
+
+.burger-btn,
+.mobile-menu-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  max-width: 480px;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--main-lite-color);
+}
+
 .menu {
   display: flex;
   align-items: center;
@@ -771,28 +793,68 @@ form .modal-btn {
   margin-left: auto;
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .contact-list {
+    flex-direction: column;
+  }
+}
+
 .contact-icons {
   vertical-align: middle;
   margin-right: 10px;
   fill: currentColor;
 }
 
-.header-contact:not(:last-child) {
-  margin-right: 50px;
+@media screen and (min-width: 1200px) {
+  .header-contact:not(:last-child) {
+    margin-right: 50px;
+  }
 }
 
 .header-contacts {
+  margin: 0 auto;
   display: flex;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
-  padding: 32px 0;
   transition: color 250ms var(--time-function);
+}
+
+@media screen and (min-width: 768px) {
+  .header-contacts {
+    padding: 5px 0;
+    font-size: 12px;
+    line-height: 1.17;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header-contacts {
+    padding: 32px 0;
+  }
 }
 
 .header-contacts:hover, .header-contacts:focus {
   color: var(--accent-color);
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-list {
+    display: none;
+  }
+  .contact-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
 }
 
 .hero {
