--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,6 +7,37 @@
   align-items: center;
 }
 
+.burger-btn {
+  margin-left: auto;
+}
+
+.burger-btn,
+.mobile-menu-close-btn {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+}
+
+.mobile-menu-close-btn {
+  // position: absolute;
+  // top: 10px;
+  // right: 15px;
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  // left: 50%;
+  width: 100vw;
+  max-width: 480px;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--main-lite-color);
+  // transform: translateY(-100%) translateX(-50%);
+  // transition: transform 250ms linear;
+}
+
 .menu {
   display: flex;
   align-items: center;
@@ -75,6 +106,10 @@
 .contact-list {
   display: flex;
   margin-left: auto;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    flex-direction: column;
+  }
 }
 
 .contact-icons {
@@ -85,21 +120,50 @@
 
 .header-contact {
   &:not(:last-child) {
-    margin-right: 50px;
+    @media screen and (min-width: 1200px) {
+      margin-right: 50px;
+    }
   }
 }
 
 .header-contacts {
+  margin: 0 auto;
   display: flex;
   font-weight: 500;
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--secondary-color);
-  padding: 32px 0;
   transition: color 250ms var(--time-function);
+
+  @media screen and (min-width: 768px) {
+    padding: 5px 0;
+    font-size: 12px;
+    line-height: 1.17;
+  }
+  @media screen and (min-width: 1200px) {
+    padding: 32px 0;
+  }
 
   &:hover,
   &:focus {
     color: var(--accent-color);
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .navigation-list {
+    display: none;
+  }
+  .contact-list {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
   }
 }
