--- a/CSS/main.css
+++ b/CSS/main.css
@@ -716,12 +716,17 @@ form .modal-btn {
   padding: 0;
 }
 
+.mobile-menu-close-btn {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+}
+
 .mobile-menu {
   position: fixed;
   top: 0;
   left: 0;
   width: 100vw;
-  max-width: 480px;
   height: 100vh;
   padding: 48px 40px;
   background-color: var(--main-lite-color);
