--- a/CSS/main.css
+++ b/CSS/main.css
@@ -117,6 +117,14 @@ body {
   }
 }
 
+@media screen and (max-width: 767px) {
+  .header .container {
+    width: 100%;
+    margin: 0 0;
+    justify-content: space-between;
+  }
+}
+
 .logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
@@ -705,33 +713,6 @@ form .modal-btn {
   align-items: center;
 }
 
-.burger-btn {
-  margin-left: auto;
-}
-
-.burger-btn,
-.mobile-menu-close-btn {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-}
-
-.mobile-menu-close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: var(--main-lite-color);
-}
-
 .menu {
   display: flex;
   align-items: center;
@@ -844,6 +825,15 @@ form .modal-btn {
   color: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .navigation-list {
     display: none;
@@ -851,14 +841,102 @@ form .modal-btn {
   .contact-list {
     display: none;
   }
-}
-
-@media screen and (min-width: 768px) {
   .burger-btn {
-    display: none;
+    margin-left: auto;
+  }
+  .burger-btn:hover, .burger-btn:focus {
+    fill: var(--accent-color);
+  }
+  .burger-btn,
+  .mobile-menu-close-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+  }
+  .mobile-menu-close-btn:hover, .mobile-menu-close-btn:focus {
+    fill: var(--accent-color);
   }
   .mobile-menu {
-    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 48px 40px;
+    background-color: var(--main-lite-color);
+    transform: translateY(0) translateX(50%);
+    transition: all 250ms var(--time-function);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    overflow: auto;
+  }
+  .is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transform: translateY(0) translateX(0);
+  }
+  .mobile-menu__list {
+    margin-bottom: 302px;
+  }
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18px;
+    letter-spacing: 0.02em;
+    color: var(--main-color);
+  }
+  .mobile-menu__link-active {
+    color: var(--accent-color);
+  }
+  .mobile-menu__contact-list {
+    margin-bottom: 64px;
+  }
+  .mobile-menu__contact-item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+  .mobile-menu__tel-link {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    margin-bottom: 32px;
+  }
+  .mobile-menu__mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17px;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+  }
+  .mobile-menu__social-list {
+    display: flex;
+  }
+  .mobile-menu__social-list-item:not(:last-child) {
+    height: 22px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+  .mobile-social-list__link {
+    display: inline-block;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    margin: auto 0;
+    padding: 0 10px;
+    vertical-align: middle;
   }
 }
 
@@ -1073,7 +1151,12 @@ form .modal-btn {
   background-color: var(--background-light-color);
 }
 
-@media screen and (min-width: 480px) {
+.clients-list {
+  margin-left: -30px;
+  margin-top: -30px;
+}
+
+@media screen and (min-width: 320px) {
   .clients-list {
     display: flex;
     flex-wrap: wrap;
@@ -1085,7 +1168,14 @@ form .modal-btn {
 
 .client-item {
   margin-top: 30px;
+  margin-left: 30px;
   height: 90px;
+}
+
+@media screen and (max-width: 479px) {
+  .client-item {
+    flex-basis: calc(100% / 2 - 30px);
+  }
 }
 
 @media screen and (min-width: 480px) {
