--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,17 +1,24 @@
 .clients-list {
-  @media screen and(min-width: 480px) {
+  margin-left: -30px;
+  margin-top: -30px;
+  @media screen and(min-width: 320px) {
     display: flex;
     flex-wrap: wrap;
     margin-left: -30px;
     margin-top: -30px;
     justify-content: center;
   }
-  // justify-content: space-between;
 }
 
 .client-item {
   margin-top: 30px;
+  margin-left: 30px;
   height: 90px;
+
+  @media screen and (max-width: 479px) {
+    flex-basis: calc(100% / 2 - 30px);
+  }
+
   @media screen and(min-width: 480px) {
     margin-left: 30px;
     width: 210px;
