--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -7,37 +7,6 @@
   align-items: center;
 }
 
-.burger-btn {
-  margin-left: auto;
-}
-
-.burger-btn,
-.mobile-menu-close-btn {
-  background-color: transparent;
-  border: none;
-  padding: 0;
-}
-
-.mobile-menu-close-btn {
-  position: absolute;
-  top: 10px;
-  right: 15px;
-}
-
-.mobile-menu {
-  position: fixed;
-  top: 0;
-  left: 0;
-  // left: 50%;
-  width: 100vw;
-  // max-width: 480px;
-  height: 100vh;
-  padding: 48px 40px;
-  background-color: var(--main-lite-color);
-  // transform: translateY(-100%) translateX(-50%);
-  // transition: transform 250ms linear;
-}
-
 .menu {
   display: flex;
   align-items: center;
@@ -150,6 +119,15 @@
   }
 }
 
+@media screen and (min-width: 768px) {
+  .burger-btn {
+    display: none;
+  }
+  .mobile-menu {
+    display: none;
+  }
+}
+
 @media screen and (max-width: 767px) {
   .navigation-list {
     display: none;
@@ -157,13 +135,120 @@
   .contact-list {
     display: none;
   }
-}
 
-@media screen and (min-width: 768px) {
   .burger-btn {
-    display: none;
+    margin-left: auto;
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
   }
+
+  .burger-btn,
+  .mobile-menu-close-btn {
+    background-color: transparent;
+    border: none;
+    padding: 0;
+  }
+
+  .mobile-menu-close-btn {
+    position: absolute;
+    top: 10px;
+    right: 15px;
+
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+    }
+  }
+
   .mobile-menu {
-    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 48px 40px;
+    background-color: var(--main-lite-color);
+    transform: translateY(0) translateX(50%);
+    transition: all 250ms var(--time-function);
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    overflow: auto;
+  }
+
+  & .is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+    transform: translateY(0) translateX(0);
+  }
+
+  .mobile-menu__list {
+    margin-bottom: 302px;
+  }
+
+  .mobile-menu__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .mobile-menu__link {
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 1.18px;
+    letter-spacing: 0.02em;
+    color: var(--main-color);
+  }
+
+  .mobile-menu__link-active {
+    color: var(--accent-color);
+  }
+
+  .mobile-menu__contact-list {
+    margin-bottom: 64px;
+  }
+
+  .mobile-menu__contact-item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+
+  .mobile-menu__tel-link {
+    font-weight: 500;
+    font-size: 34px;
+    line-height: 1.17px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    margin-bottom: 32px;
+  }
+
+  .mobile-menu__mail {
+    font-weight: 500;
+    font-size: 24px;
+    line-height: 1.17px;
+    letter-spacing: 0.02em;
+    color: var(--secondary-color);
+  }
+
+  .mobile-menu__social-list {
+    display: flex;
+  }
+
+  .mobile-menu__social-list-item:not(:last-child) {
+    height: 22px;
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+  }
+
+  .mobile-social-list__link {
+    display: inline-block;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 1.22px;
+    letter-spacing: 0.02em;
+    color: var(--accent-color);
+    margin: auto 0;
+    padding: 0 10px;
+    vertical-align: middle;
   }
 }
