--- a/CSS/main.css
+++ b/CSS/main.css
@@ -891,7 +891,7 @@ form .modal-btn {
   .mobile-menu__link {
     font-weight: 500;
     font-size: 40px;
-    line-height: 1.18px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--main-color);
   }
