--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -196,7 +196,7 @@
   .mobile-menu__link {
     font-weight: 500;
     font-size: 40px;
-    line-height: 1.18px;
+    line-height: 1.18;
     letter-spacing: 0.02em;
     color: var(--main-color);
   }
