--- a/CSS/main.css
+++ b/CSS/main.css
@@ -372,8 +372,7 @@ body {
 
 .modal {
   position: absolute;
-  width: 450px;
-  height: 609px;
+  width: 100vw;
   background-color: var(--main-lite-color);
   left: 50%;
   top: 50%;
@@ -381,6 +380,13 @@ body {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   transition: transform 250ms var(--time-function);
+}
+
+@media screen and (min-width: 480px) {
+  .modal {
+    width: 450px;
+    height: 609px;
+  }
 }
 
 @media screen and (min-width: 1200px) {
