--- a/CSS/main.css
+++ b/CSS/main.css
@@ -373,6 +373,7 @@ body {
 .modal {
   position: absolute;
   width: 100vw;
+  max-height: 100vh;
   background-color: var(--main-lite-color);
   left: 50%;
   top: 50%;
