--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -233,6 +233,7 @@
 
   .mobile-menu__social-list {
     display: flex;
+    flex-wrap: wrap;
   }
 
   .mobile-menu__social-list-item:not(:last-child) {
