--- a/sass/layout/_team.scss
+++ b/sass/layout/_team.scss
@@ -26,9 +26,9 @@
 }
 
 .team-member-wrapper {
-  padding: 30px 0 24px;
+  padding: 30px 32px 24px;
   @media screen and(min-width: 1200px) {
-    padding: 30px 0;
+    padding: 30px 32px;
   }
 }
 
