--- a/CSS/main.css
+++ b/CSS/main.css
@@ -101,12 +101,12 @@ body {
 .footer .container {
   display: flex;
   align-items: center;
-  text-align: center;
 }
 
 @media screen and (max-width: 1199px) {
   .footer .container {
     flex-direction: column;
+    text-align: center;
   }
 }
 
@@ -142,10 +142,21 @@ body {
 }
 
 .header .logo {
-  margin-right: 93px;
   display: block;
   padding-top: 24px;
   padding-bottom: 25px;
+}
+
+@media screen and (min-width: 768px) {
+  .header .logo {
+    margin-right: 88px;
+  }
+}
+
+@media screen and (min-width: 1200px) {
+  .header .logo {
+    margin-right: 93px;
+  }
 }
 
 .footer .logo {
@@ -223,8 +234,10 @@ body {
   fill: var(--main-lite-color);
 }
 
-.subscribe-container {
-  margin-top: 60px;
+@media screen and (max-width: 1199px) {
+  .subscribe-container {
+    margin-top: 60px;
+  }
 }
 
 @media screen and (max-width: 767px) {
@@ -454,6 +467,7 @@ body {
   font-weight: 400;
   font-size: 12px;
   line-height: 1.16;
+  flex-wrap: wrap;
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 }
@@ -498,6 +512,7 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--accent-color);
+  white-space: normal;
 }
 
 @media screen and (1200px) {
@@ -710,6 +725,14 @@ form .modal-btn {
   }
 }
 
+@media screen and (max-width: 480px) {
+  .portfolio_overlay {
+    padding: 48px 20px;
+    font-size: 16px;
+    overflow: auto;
+  }
+}
+
 .header {
   background-color: var(--main-lite-color);
   border-bottom: #ececec solid;
@@ -804,6 +827,17 @@ form .modal-btn {
   }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-contact:first-child {
+    padding-top: 21px;
+    padding-bottom: 5px;
+  }
+  .header-contact:last-child {
+    padding-top: 5px;
+    padding-bottom: 21px;
+  }
+}
+
 .header-contacts {
   margin: 0 auto;
   display: flex;
@@ -816,7 +850,6 @@ form .modal-btn {
 
 @media screen and (min-width: 768px) {
   .header-contacts {
-    padding: 5px 0;
     font-size: 12px;
     line-height: 1.17;
   }
@@ -870,10 +903,13 @@ form .modal-btn {
   }
   .mobile-menu {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 48px 40px;
     background-color: var(--main-lite-color);
     transform: translateY(0) translateX(50%);
@@ -890,10 +926,7 @@ form .modal-btn {
     pointer-events: auto;
     transform: translateY(0) translateX(0);
   }
-  .mobile-menu__list {
-    margin-bottom: 302px;
-  }
-  .mobile-menu__item:not(:last-child) {
+  .mobile-menu__item {
     margin-bottom: 32px;
   }
   .mobile-menu__link {
@@ -949,11 +982,18 @@ form .modal-btn {
   }
 }
 
+@media screen and (max-width: 480px) {
+  .mobile-menu__tel-link {
+    font-size: 26px;
+  }
+}
+
 .hero {
   background-color: var(--background-dark-color);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/mobile/hero-bcgr-mobile.jpg);
   padding: 118px 0;
   max-width: 1600px;
+  height: 400px;
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -970,6 +1010,7 @@ form .modal-btn {
   .hero {
     background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url(../images/hero/desktop/hero-bcgr-desktop.jpg);
     padding: 200px 0;
+    height: 600px;
   }
 }
 
@@ -1129,12 +1170,12 @@ form .modal-btn {
 }
 
 .team-member-wrapper {
-  padding: 30px 0 24px;
+  padding: 30px 32px 24px;
 }
 
 @media screen and (min-width: 1200px) {
   .team-member-wrapper {
-    padding: 30px 0;
+    padding: 30px 32px;
   }
 }
 
