--- a/sass/components/_portfolio-overlay.scss
+++ b/sass/components/_portfolio-overlay.scss
@@ -18,7 +18,6 @@
   vertical-align: top;
   letter-spacing: 0.03em;
   color: var(--main-lite-color);
-  // overflow: auto;
 
   .portfolio-item-link:hover &,
   .portfolio-item-link:focus & {
@@ -27,5 +26,10 @@
 
   @media screen and(min-width: 1200px) {
     padding: 63px 24px;
+  }
+  @media screen and(max-width: 480px) {
+    padding: 48px 20px;
+    font-size: 16px;
+    overflow: auto;
   }
 }
