--- a/sass/components/_subscribe-input.scss
+++ b/sass/components/_subscribe-input.scss
@@ -1,5 +1,7 @@
 .subscribe-container {
-  margin-top: 60px;
+  @media screen and(max-width: 1199px) {
+    margin-top: 60px;
+  }
 
   @media screen and(max-width: 767px) {
     width: 100%;
