--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,6 +93,16 @@
       margin-right: 50px;
     }
   }
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    &:first-child {
+      padding-top: 21px;
+      padding-bottom: 5px;
+    }
+    &:last-child {
+      padding-top: 5px;
+      padding-bottom: 21px;
+    }
+  }
 }
 
 .header-contacts {
@@ -105,10 +115,10 @@
   transition: color 250ms var(--time-function);
 
   @media screen and (min-width: 768px) {
-    padding: 5px 0;
     font-size: 12px;
     line-height: 1.17;
   }
+
   @media screen and (min-width: 1200px) {
     padding: 32px 0;
   }
@@ -164,10 +174,13 @@
 
   .mobile-menu {
     position: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     padding: 48px 40px;
     background-color: var(--main-lite-color);
     transform: translateY(0) translateX(50%);
@@ -186,11 +199,7 @@
     transform: translateY(0) translateX(0);
   }
 
-  .mobile-menu__list {
-    margin-bottom: 302px;
-  }
-
-  .mobile-menu__item:not(:last-child) {
+  .mobile-menu__item {
     margin-bottom: 32px;
   }
 
@@ -252,5 +261,11 @@
     margin: auto 0;
     padding: 0 10px;
     vertical-align: middle;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .mobile-menu__tel-link {
+    font-size: 26px;
   }
 }
