--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -39,7 +39,12 @@
   letter-spacing: 0.03em;
   color: var(--secondary-color);
 
-  @media screen and( 1200px) {
+  @media screen and(max-width: 479px) {
+    font-size: 11px;
+    line-height: 1.16;
+  }
+
+  @media screen and(min-width: 1200px) {
     font-size: 14px;
     line-height: 1.71;
   }
@@ -79,7 +84,13 @@
   letter-spacing: 0.03em;
   color: var(--accent-color);
   white-space: normal;
-  @media screen and( 1200px) {
+
+  @media screen and(max-width: 479px) {
+    font-size: 11px;
+    line-height: 1.16;
+  }
+
+  @media screen and(min-width: 1200px) {
     font-size: 14px;
     line-height: 1.71;
   }
