--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -93,15 +93,16 @@
       margin-right: 50px;
     }
   }
-  @media screen and (min-width: 768px) and (max-width: 1199px) {
-    &:first-child {
-      padding-top: 21px;
-      padding-bottom: 5px;
-    }
-    &:last-child {
-      padding-top: 5px;
-      padding-bottom: 21px;
-    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header-contact > a[href='mailto:info@devstudio.com'] {
+    padding-top: 21px;
+    padding-bottom: 5px;
+  }
+  .header-contact > a[href='tel:+380961111111'] {
+    padding-bottom: 21px;
+    padding-top: 5px;
   }
 }
 
@@ -118,7 +119,6 @@
     font-size: 12px;
     line-height: 1.17;
   }
-
   @media screen and (min-width: 1200px) {
     padding: 32px 0;
   }
